[package]
name = "libflatterer"
version = "0.13.4"
authors = ["David Raznick <kindly@gmail.com>"]
edition = "2021"
description = "Lib to make JSON flatterer"
license = "MIT"
repository = "https://github.com/kindly/libflatterer"
homepage = "https://github.com/kindly/libflatterer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yajlish = { version = "0.4.0" }
serde_json = { version = "1", features = ["preserve_order"] }
tempfile = "3"
itertools = "0.10"
csv = "1"
serde = {version = "1", features = ["derive"] }
xlsxwriter = "0.3"
crossbeam-channel="0.5"
smallvec="1.6.1"
regex="1"
jsonref= "0.4"
slug="0.1"
smartstring={version = "1.0.0", features = ["serde"] }
snafu = {version = "0.7.0"}
indexmap = {version = "1.7.0", features = ["serde"] }
log = "0.4"
lazy_static = "1"
rusqlite = {version = "0.27.0", features = ["bundled"] }
#datapackage_convert = {"path"= "../datapackage_convert"}
datapackage_convert = "0.5.4"
typed-builder = "0.10.0"
num_cpus = "1.13.1"


[dev-dependencies]
insta = {version = "1.12.0", features = ["redactions"]}
