[package]
name = "libflatterer"
version = "0.16.0"
authors = ["David Raznick <kindly@gmail.com>"]
edition = "2021"
description = "Lib to make JSON flatterer"
license = "MIT"
repository = "https://github.com/kindly/libflatterer"
homepage = "https://github.com/kindly/libflatterer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yajlish = { version = "0.4.0" }
serde_json = { version = "1", features = ["preserve_order"] }
itertools = "0.10"
csv = "1"
serde = {version = "1", features = ["derive"] }
smallvec="1.6.1"
regex="1"
slug="0.1"
smartstring={version = "1.0.0", features = ["serde"] }
snafu = {version = "0.7.0"}
indexmap = {version = "1", features = ["serde"] }
log = "0.4"
lazy_static = "1"
#datapackage_convert = {"path"= "../datapackage_convert"}
typed-builder = "0.10.0"
num_cpus = "1.13.1"
flate2 = "1.0.24"

#[target.'cfg(target_family = "wasm")'.dependencies]
#getrandom = {version="0.2", features = ["js"]}
#umya-spreadsheet = "0.7.2"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
jsonref= "0.4"
crossbeam-channel="0.5"
tempfile = "3"
rusqlite = {version = "0.28.0", features = ["bundled"]}
datapackage_convert = "0.6.1"
xlsxwriter = "0.3"
nanoid = "0.4.0"




[dev-dependencies]
insta = {version = "1.12.0", features = ["redactions"]}
