[package]
name = "libflatterer"
version = "0.19.6"
authors = ["David Raznick <kindly@gmail.com>"]
edition = "2021"
description = "Lib to make JSON flatterer"
license = "MIT"
repository = "https://github.com/kindly/libflatterer"
homepage = "https://github.com/kindly/libflatterer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yajlish = { version = "0.4.0" }
#yajlish = { path = "../yajlish" }
serde_json = { version = "1", features = ["preserve_order"] }
itertools = "0.10"
csv = "1"
serde = {version = "1", features = ["derive"] }
smallvec="1.6.1"
regex="1"
slug="0.1"
smartstring={version = "1.0.0", features = ["serde"] }
snafu = {version = "0.7.0"}
indexmap = {version = "1", features = ["serde"] }
log = "0.4"
lazy_static = "1"
typed-builder = "0.10.0"
num_cpus = "1.13.1"
flate2 = "1.0.24"
csvs_convert = "0.8.6"
bytes = "1.4.0"
url = "2.3.1"
jsonpath-rust = "0.3.0"

# [target.'cfg(target_family = "wasm")'.dependencies]
# getrandom = {version="0.2", features = ["js"]}
# umya-spreadsheet = "0.7.2"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
jsonref= "0.4"
object_store = { version = "0.5.6", features = ["aws", "http"]}
#object_store = { git = "https://github.com/apache/arrow-rs.git", features = ["aws", "http"]}

crossbeam-channel="0.5"
tempfile = "3"
xlsxwriter = "0.6"
nanoid = "0.4.0"
tokio = { version = "1.27.0", features = ["rt"] }
csv-async = { version = "1.2.6", features = ["tokio"] }
futures-util = { version = "0.3.27" }
parquet = {version = "38.0.0", features = ["async"] }
tokio-util = { version = "0.7.7", features = ["io", "io-util"] }
futures = {version = "0.3.28"}
arrow-array = "38.0.0"
arrow-schema = "38.0.0"
async-compression = { version = "0.3.15", features = ["gzip", "tokio"] }
env_logger = "0.10.0"

[dev-dependencies]
insta = {version = "1.21.1", features = ["redactions", "yaml"]}
logtest = "2.0.0"

[profile.release]
debug = 1
